# sarhlib

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
src/csocket/: CMakeLists.txt
src/csocket/examples/client/: CMakeLists.txt  client.cpp
src/csocket/examples/socket-server/: CMakeLists.txt  server.cpp
src/csocket/include/: serversocket.h  socket.h  socketaddress.h  tcpsocket.h
src/csocket/src/: serversocket.cpp  socket.cpp  tcpsocket.cpp
src/csocket/tests/: CMakeLists.txt  client_tests.cpp  tcp-client.cpp  tcp-server.cpp
src/flex/: CMakeLists.txt
src/flex/include/flex/: discovery.h  gui_client.h  radio.h
src/flex/include/flex/vita/: vita_discovery.h
src/flex/src/: discovery.cpp
src/flex/tests/: CMakeLists.txt  discovery_test.cpp
src/safequeue/: CMakeLists.txt
src/safequeue/include/safequeue/: safequeue.h  safequeue2.h
src/sarhc/: CMakeLists.txt
src/sarhc/include/: array.h  common.h  list.h  queue.h  read_line.h  stack.h  strings.h
src/sarhc/src/: array.c  list.c  queue.c  read_line.c  stack.c  strings.c
src/socket/: CMakeLists.txt
src/socket/examples/: CMakeLists.txt
src/socket/examples/client/: CMakeLists.txt  client.cpp
src/socket/examples/socket-server/: CMakeLists.txt  server.cpp
src/socket/include/: serversocket.h  socket.h  socketaddress.h  tcpsocket.h
src/socket/src/: serversocket.cpp  socket.cpp  tcpsocket.cpp
src/socket/tests/: CMakeLists.txt  client_tests.cpp  tcp-client.cpp  tcp-server.cpp
src/split/: CMakeLists.txt
src/split/include/: split.h
src/split/src/: split.cpp
src/split/tests/: CMakeLists.txt  split_test.cpp
templates/: CMakeLists.txt  template-c17.cpp
tests/: CMakeLists.txt
